hphp/hack/test/typecheck/expression_trees/instance_method_call2.php.exp
File "instance_method_call2.php", line 19, characters 5-28:
Expression trees do not support calling instance methods (Parsing[1002])
File "instance_method_call2.php", line 19, characters 19-21:
No instance method `bar` in `Awaitable` (Typing[4053])
  File "classes.hhi", line 167, characters 28-51:
  Did you mean static method `setOnIOWaitEnterCallback` instead?
  File "instance_method_call2.php", line 13, characters 4-92:
  This is why I think it is an object of type HH\Awaitable
  File "classes.hhi", line 166, characters 18-26:
  Declaration of `Awaitable` is here
File "instance_method_call2.php", line 19, characters 5-16:
Too few arguments (required 1 but got 0) (Typing[4104])
  File "instance_method_call2.php", line 11, characters 10-19:
  Definition is here
